--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,5 +1,11 @@
 linters:
   flake8:
+    python: 3
+    max-line-length: 160
+    fixer: true
+  pep8:
+    python: 3
+    max-line-length: 160
     fixer: true
 fixers:
   enable: true
