Add PromMetrics to communicate with a Prometheus instance and use live data

--- a/Pipfile
+++ b/Pipfile
@@ -4,9 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+apscheduler = "*"
 rx = "*"
 pandas = "*"
 influxdb = "*"
+
 
 [dev-packages]
 pytest = "*"
