influx and cluster version

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 FLT_PROM_URL=https://thanos.example.com
 FLT_PROM_ACCESS_TOKEN=make oc_get_token
-FLT_METRICS_LIST=etcd_object_counts,alerts
+FLT_METRICS_LIST=cluster_version,etcd_object_counts,alerts
 FLT_METRIC_START_DATETIME=14 Dec 2018
 FLT_METRIC_END_DATETIME=15 Dec 2018
 FLT_METRIC_CHUNK_SIZE=1h
-FTL_INFLUX_DB_URL=example.com:8080
+FTL_INFLUX_DB_DSN=influxdb://username:password@localhost:8086/databasename
 NAMESPACE=aiops-prod-prometheus-lts
