--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,6 @@ FLT_METRICS_LIST=cluster_version,etcd_object_counts,alerts
 FLT_METRIC_START_DATETIME=14 Dec 2018
 FLT_METRIC_END_DATETIME=15 Dec 2018
 FLT_METRIC_CHUNK_SIZE=1h
+FLT_LIVE_METRIC_COLLECT=False
 FTL_INFLUX_DB_DSN=influxdb://username:password@localhost:8086/databasename
 NAMESPACE=aiops-prod-prometheus-lts
