Add support for live metric delay to Makefile and deployment template

--- a/openshift/prometheus-flatliner-live-deployment-template.yaml
+++ b/openshift/prometheus-flatliner-live-deployment-template.yaml
@@ -42,6 +42,9 @@ parameters:
 - name: FLT_INFLUX_DB_DSN
   description: The URL to connect to an influx database
   required: true
+- name: FLT_LIVE_METRIC_DELAY
+  description: The URL to connect to an influx database
+  required: true
 - name: FLT_DEBUG_MODE
   description: Enable verbose log for debugging
   value: 'False'
@@ -136,6 +139,8 @@ objects:
             value: "${FLT_LIVE_METRIC_COLLECT}"
           - name: FLT_INFLUX_DB_DSN
             value: "${FLT_INFLUX_DB_DSN}"
+          - name: FLT_LIVE_METRIC_DELAY
+            value: "${FLT_LIVE_METRIC_DELAY}"
           - name: FLT_DEBUG_MODE
             value: "${FLT_DEBUG_MODE}"
           image: ${APPLICATION_NAME}
