Add parameter description for FLT_LIVE_METRIC_DELAY. And change it to an optional parameter.

--- a/openshift/prometheus-flatliner-live-deployment-template.yaml
+++ b/openshift/prometheus-flatliner-live-deployment-template.yaml
@@ -43,8 +43,9 @@ parameters:
   description: The URL to connect to an influx database
   required: true
 - name: FLT_LIVE_METRIC_DELAY
-  description: The URL to connect to an influx database
-  required: true
+  description: The rolling delay while collecting live metrics (now = no delay, 5m = 5 minutes of delay) 
+  value: 'now'
+  required: false
 - name: FLT_DEBUG_MODE
   description: Enable verbose log for debugging
   value: 'False'
