Add flatliner VersionFilter and its feature flag.

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,4 @@ FLT_METRIC_CHUNK_SIZE=1h
 FLT_LIVE_METRIC_COLLECT=False
 FTL_INFLUX_DB_DSN=influxdb://username:password@localhost:8086/databasename
 NAMESPACE=aiops-prod-prometheus-lts
+FLT_VERSION_FILTER_REGEX="^[0-9]*\.[0-9]*\.[0-9]*-[0-9]*\.[0-9]*$"
