Add VersionFilter flags in oc templates

--- a/openshift/prometheus-flatliner-job-template.yaml
+++ b/openshift/prometheus-flatliner-job-template.yaml
@@ -43,6 +43,8 @@ objects:
             value: "${FLT_METRIC_END_DATETIME}"
           - name: FLT_METRIC_CHUNK_SIZE
             value: "${FLT_METRIC_CHUNK_SIZE}"
+          - name: FLT_VERSION_FILTER_REGEX
+            value: "${FLT_VERSION_FILTER_REGEX}"
           - name: FLT_INFLUX_DB_DSN
             value: "${FLT_INFLUX_DB_DSN}"
           - name: FLT_DEBUG_MODE
@@ -81,4 +83,7 @@ parameters:
 - name: FLT_DEBUG_MODE
   description: Enable verbose log for debugging
   value: 'False'
+  required: false
+- name: FLT_VERSION_FILTER_REGEX
+  description: Regex expression to filter for metrics based on version info, eg. '^4\.0'
   required: false
