--- a/.thoth.yaml
+++ b/.thoth.yaml
@@ -17,3 +17,7 @@ managers:
   - name: thoth-provenance
     configuration:
       labels: [bot, kebechet]
+  - name: update
+    configuration:
+      labels: [bot]
+  - name: info
